Kubernetes/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        command: ["redis-server", "--save", "20", "1", "--loglevel", "warning", "--requirepass", "eYVX7EwVmmxKPCDmwMtyKVge8oLd2t81"]
        ports:
        - containerPort: 6379
        volumeMounts:
        - name: cache
          mountPath: /data
        resources:
          limits:
            memory: 512Mi
            cpu: 500m
          requests:
            memory: 512Mi
            cpu: 500m
      volumes:
      - name: cache
        persistentVolumeClaim:
          claimName: cache
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis
  ports:
    - name: redis-port
      port: 6379
      targetPort: 6379
  type: LoadBalancer
